--- a/near-sdk-macros/Cargo.toml
+++ b/near-sdk-macros/Cargo.toml
@@ -19,4 +19,5 @@ proc-macro2 = "1.0"
 syn = {version = "1", features = ["full", "fold", "extra-traits", "visit"] }
 quote = "1.0"
 Inflector = { version = "0.11.4", default-features = false, features = [] }
-witgen_macro_helper = {git = "https://github.com/bnjjj/witgen", rev = "de915dede5f234575e0c7f8192a7264a9d110f31"}
+# witgen_macro_helper = { path = "../../witgen/crates/witgen_macro_helper"}
+witgen_macro_helper = {git = "https://github.com/ahalabs/witgen", rev = "1aca670c8c4589a214a7e9e1e79bd9a89001870e"}
