--- a/near-sdk-macros/Cargo.toml
+++ b/near-sdk-macros/Cargo.toml
@@ -20,4 +20,4 @@ syn = {version = "1", features = ["full", "fold", "extra-traits", "visit"] }
 quote = "1.0"
 Inflector = { version = "0.11.4", default-features = false, features = [] }
 # witgen_macro_helper = { path = "../../witgen/crates/witgen_macro_helper"}
-witgen_macro_helper = {git = "https://github.com/ahalabs/witgen", rev = "1aca670c8c4589a214a7e9e1e79bd9a89001870e"}
+witgen_macro_helper = {git = "https://github.com/bnjjj/witgen", rev = "cfe9ed4063c6ec79f2af12b7354afaa97b5a6e33"}
