--- a/near-sdk-macros/Cargo.toml
+++ b/near-sdk-macros/Cargo.toml
@@ -19,6 +19,7 @@ proc-macro2 = "1.0"
 syn = {version = "1", features = ["full", "fold", "extra-traits", "visit"] }
 quote = "1.0"
 Inflector = { version = "0.11.4", default-features = false, features = [] }
+once_cell = "1.4.0"
 
 [features]
 abi = []
